Revamp for quant level