@@ -1,13 +1,13 @@
 package id.co.blackheart.service.live;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import id.co.blackheart.dto.strategy.StrategyContext;
+import id.co.blackheart.dto.strategy.EnrichedStrategyContext;
 import id.co.blackheart.dto.strategy.StrategyDecision;
 import id.co.blackheart.dto.tradelistener.ListenerDecision;
+import id.co.blackheart.model.Account;
 import id.co.blackheart.model.Portfolio;
 import id.co.blackheart.model.TradePosition;
 import id.co.blackheart.model.Trades;
-import id.co.blackheart.model.Account;
 import id.co.blackheart.repository.TradePositionRepository;
 import id.co.blackheart.repository.TradesRepository;
 import id.co.blackheart.service.portfolio.PortfolioService;
@@ -29,19 +29,28 @@ import java.util.UUID;
 public class LiveTradingDecisionExecutorService {
 
     private static final BigDecimal MIN_USDT_NOTIONAL = new BigDecimal("7");
-    private static final BigDecimal MIN_BTC_NOTIONAL =  new BigDecimal("0.00001");
+    private static final BigDecimal MIN_BTC_NOTIONAL = new BigDecimal("0.00001");
 
     private static final String STATUS_OPEN = "OPEN";
     private static final String STATUS_CLOSED = "CLOSED";
     private static final String STATUS_PARTIALLY_CLOSED = "PARTIALLY_CLOSED";
+
+    private static final String SIDE_LONG = "LONG";
+    private static final String SIDE_SHORT = "SHORT";
+    private static final String EXIT_REASON_MANUAL_CLOSE = "MANUAL_CLOSE";
+    private static final String EXIT_REASON_STRATEGY_EXIT = "STRATEGY_EXIT";
 
     private final TradesRepository tradesRepository;
     private final TradePositionRepository tradePositionRepository;
     private final PortfolioService portfolioService;
     private final TradeService tradeService;
 
-    public void execute(Trades activeTrade, StrategyContext context,StrategyDecision decision) throws JsonProcessingException {
-        if (decision == null || decision.getDecisionType() == null) {
+    public void execute(
+            Trades activeTrade,
+            EnrichedStrategyContext context,
+            StrategyDecision decision
+    ) throws JsonProcessingException {
+        if (decision == null || decision.getDecisionType() == null || context == null) {
             return;
         }
 
@@ -49,7 +58,7 @@ public class LiveTradingDecisionExecutorService {
             case OPEN_LONG -> executeOpenLong(context, decision);
             case OPEN_SHORT -> executeOpenShort(context, decision);
             case UPDATE_POSITION_MANAGEMENT -> executeUpdatePositionManagement(activeTrade, decision);
-            case CLOSE_LONG  -> executeCloseTrade(activeTrade, context.getAccount(), decision.getExitReason());
+            case CLOSE_LONG -> executeCloseTrade(activeTrade, context.getAccount(), decision.getExitReason());
             case CLOSE_SHORT -> executeCloseTrade(activeTrade, context.getAccount(), decision.getExitReason());
             case HOLD -> log.debug("No execution for HOLD");
             default -> log.debug("Decision type not handled yet: {}", decision.getDecisionType());
@@ -57,7 +66,7 @@ public class LiveTradingDecisionExecutorService {
     }
 
     public void executeListenerClosePosition(
-            Account user,
+            Account account,
             TradePosition activeTradePosition,
             String asset,
             ListenerDecision listenerDecision
@@ -69,10 +78,10 @@ public class LiveTradingDecisionExecutorService {
         activeTradePosition.setExitReason(listenerDecision.getExitReason());
         tradePositionRepository.save(activeTradePosition);
 
-        if ("LONG".equalsIgnoreCase(activeTradePosition.getSide())) {
-            tradeService.binanceCloseLongPositionMarketOrder(user, activeTradePosition, asset);
-        } else if ("SHORT".equalsIgnoreCase(activeTradePosition.getSide())) {
-            tradeService.binanceCloseShortPositionMarketOrder(user, activeTradePosition, asset);
+        if (SIDE_LONG.equalsIgnoreCase(activeTradePosition.getSide())) {
+            tradeService.binanceCloseLongPositionMarketOrder(account, activeTradePosition, asset);
+        } else if (SIDE_SHORT.equalsIgnoreCase(activeTradePosition.getSide())) {
+            tradeService.binanceCloseShortPositionMarketOrder(account, activeTradePosition, asset);
         } else {
             log.warn(
                     "Unknown side for listener close | tradePositionId={} side={}",
@@ -85,128 +94,172 @@ public class LiveTradingDecisionExecutorService {
         refreshParentTradeSummary(activeTradePosition.getTradeId());
     }
 
-    public void executeManualClosePosition(
-            Account user,
-            UUID tradePositionId
-    ) throws JsonProcessingException {
+    public void executeManualClosePosition(Account account, UUID tradePositionId) throws JsonProcessingException {
         TradePosition tradePosition = tradePositionRepository.findByTradePositionId(tradePositionId).orElse(null);
         if (tradePosition == null || !STATUS_OPEN.equalsIgnoreCase(tradePosition.getStatus())) {
             return;
         }
 
-        tradePosition.setExitReason("MANUAL_CLOSE");
+        tradePosition.setExitReason(EXIT_REASON_MANUAL_CLOSE);
         tradePositionRepository.save(tradePosition);
 
-        if ("LONG".equalsIgnoreCase(tradePosition.getSide())) {
-            tradeService.binanceCloseLongPositionMarketOrder(user, tradePosition, tradePosition.getAsset());
-        } else if ("SHORT".equalsIgnoreCase(tradePosition.getSide())) {
-            tradeService.binanceCloseShortPositionMarketOrder(user, tradePosition, tradePosition.getAsset());
+        if (SIDE_LONG.equalsIgnoreCase(tradePosition.getSide())) {
+            tradeService.binanceCloseLongPositionMarketOrder(account, tradePosition, tradePosition.getAsset());
+        } else if (SIDE_SHORT.equalsIgnoreCase(tradePosition.getSide())) {
+            tradeService.binanceCloseShortPositionMarketOrder(account, tradePosition, tradePosition.getAsset());
+        } else {
+            log.warn(
+                    "Unknown side for manual close | tradePositionId={} side={}",
+                    tradePosition.getTradePositionId(),
+                    tradePosition.getSide()
+            );
+            return;
         }
 
         refreshParentTradeSummary(tradePosition.getTradeId());
     }
 
     public void executeListenerClosePositions(
-            Account user,
+            Account account,
             List<TradePosition> activeTradePositions,
             String asset,
             ListenerDecision listenerDecision
     ) throws JsonProcessingException {
-        if (activeTradePositions == null || activeTradePositions.isEmpty() || listenerDecision == null || !listenerDecision.isTriggered()) {
+        if (activeTradePositions == null || activeTradePositions.isEmpty()
+                || listenerDecision == null || !listenerDecision.isTriggered()) {
             return;
         }
 
-        TradePosition firstPosition = activeTradePositions.get(0);
+        TradePosition firstPosition = activeTradePositions.getFirst();
 
         for (TradePosition tradePosition : activeTradePositions) {
             tradePosition.setExitReason(listenerDecision.getExitReason());
         }
         tradePositionRepository.saveAll(activeTradePositions);
 
-        if ("LONG".equalsIgnoreCase(firstPosition.getSide())) {
-            tradeService.binanceCloseLongPositionsMarketOrder(user, activeTradePositions, asset);
-        } else if ("SHORT".equalsIgnoreCase(firstPosition.getSide())) {
-            tradeService.binanceCloseShortPositionsMarketOrder(user, activeTradePositions, asset);
+        if (SIDE_LONG.equalsIgnoreCase(firstPosition.getSide())) {
+            tradeService.binanceCloseLongPositionsMarketOrder(account, activeTradePositions, asset);
+        } else if (SIDE_SHORT.equalsIgnoreCase(firstPosition.getSide())) {
+            tradeService.binanceCloseShortPositionsMarketOrder(account, activeTradePositions, asset);
         } else {
-            log.warn("Unknown side for grouped listener close | tradeId={} side={}",
-                    firstPosition.getTradeId(), firstPosition.getSide());
+            log.warn(
+                    "Unknown side for grouped listener close | tradeId={} side={}",
+                    firstPosition.getTradeId(),
+                    firstPosition.getSide()
+            );
             return;
         }
 
         refreshParentTradeSummary(firstPosition.getTradeId());
     }
 
-    public void executeManualCloseTrade(Account user, UUID tradeId) {
+    public void executeManualCloseTrade(Account account, UUID tradeId) throws JsonProcessingException {
         List<TradePosition> openPositions = tradePositionRepository.findAllByTradeIdAndStatus(tradeId, STATUS_OPEN);
+        if (openPositions.isEmpty()) {
+            return;
+        }
+
+        TradePosition firstPosition = openPositions.getFirst();
 
         for (TradePosition tradePosition : openPositions) {
-            tradePosition.setExitReason("MANUAL_CLOSE");
-            tradePositionRepository.save(tradePosition);
+            tradePosition.setExitReason(EXIT_REASON_MANUAL_CLOSE);
+        }
+        tradePositionRepository.saveAll(openPositions);
 
-            if ("LONG".equalsIgnoreCase(tradePosition.getSide())) {
-                tradeService.binanceCloseLongPositionMarketOrder(user, tradePosition, tradePosition.getAsset());
-            } else if ("SHORT".equalsIgnoreCase(tradePosition.getSide())) {
-                tradeService.binanceCloseShortPositionMarketOrder(user, tradePosition, tradePosition.getAsset());
-            }
+        if (SIDE_LONG.equalsIgnoreCase(firstPosition.getSide())) {
+            tradeService.binanceCloseLongPositionsMarketOrder(account, openPositions, firstPosition.getAsset());
+        } else if (SIDE_SHORT.equalsIgnoreCase(firstPosition.getSide())) {
+            tradeService.binanceCloseShortPositionsMarketOrder(account, openPositions, firstPosition.getAsset());
+        } else {
+            log.warn(
+                    "Unknown side for manual trade close | tradeId={} side={}",
+                    tradeId,
+                    firstPosition.getSide()
+            );
+            return;
         }
 
         refreshParentTradeSummary(tradeId);
     }
 
     private void executeOpenLong(
-            StrategyContext context,
+            EnrichedStrategyContext context,
             StrategyDecision decision
     ) throws JsonProcessingException {
-        Account user = context.getAccount();
+        Account account = context.getAccount();
 
-        Portfolio usdtPortfolio = portfolioService.updateAndGetAssetBalance("USDT", user);
-        BigDecimal balance = safe(usdtPortfolio.getBalance());
-        BigDecimal tradeAmount = calculateLongTradeAmount(balance, user);
+        Portfolio usdtPortfolio = portfolioService.updateAndGetAssetBalance("USDT", account);
+        BigDecimal balance = usdtPortfolio == null ? BigDecimal.ZERO : safe(usdtPortfolio.getBalance());
 
-        if (balance.compareTo(tradeAmount) < 0) {
-            log.info("Insufficient USDT balance for LONG entry. balance={} required={}", balance, tradeAmount);
+        BigDecimal tradeAmount = decision.getNotionalSize() != null
+                ? decision.getNotionalSize()
+                : calculateLongTradeAmount(balance, account);
+
+        if (tradeAmount.compareTo(BigDecimal.ZERO) <= 0) {
+            log.info("Invalid LONG trade amount. tradeAmount={}", tradeAmount);
             return;
         }
 
-        if ("BNC".equalsIgnoreCase(user.getExchange())) {
+        if (balance.compareTo(tradeAmount) < 0) {
+            log.info(
+                    "Insufficient USDT balance for LONG entry | balance={} required={}",
+                    balance,
+                    tradeAmount
+            );
+            return;
+        }
+
+        if ("BNC".equalsIgnoreCase(account.getExchange())) {
             tradeService.binanceOpenLongMarketOrder(context, decision, tradeAmount);
             return;
         }
 
-        log.warn("Unsupported exchange for LONG entry: {}", user.getExchange());
+        log.warn("Unsupported exchange for LONG entry: {}", account.getExchange());
     }
 
     private void executeOpenShort(
-            StrategyContext context,
+            EnrichedStrategyContext context,
             StrategyDecision decision
     ) throws JsonProcessingException {
-        Account user = context.getAccount();
+        Account account = context.getAccount();
 
-        Portfolio btcPortfolio = portfolioService.updateAndGetAssetBalance("BTC", user);
-        BigDecimal balance = safe(btcPortfolio.getBalance());
-        BigDecimal tradeAmount = calculateShortTradeAmount(balance, user);
+        Portfolio btcPortfolio = portfolioService.updateAndGetAssetBalance("BTC", account);
+        BigDecimal balance = btcPortfolio == null ? BigDecimal.ZERO : safe(btcPortfolio.getBalance());
+
+        BigDecimal tradeAmount = decision.getPositionSize() != null
+                ? decision.getPositionSize()
+                : calculateShortTradeAmount(balance, account);
+
+        if (tradeAmount.compareTo(BigDecimal.ZERO) <= 0) {
+            log.info("Invalid SHORT trade amount. tradeAmount={}", tradeAmount);
+            return;
+        }
 
         if (balance.compareTo(tradeAmount) < 0) {
-            log.info("Insufficient USDT balance for SHORT entry. balance={} required={}", balance, tradeAmount);
+            log.info(
+                    "Insufficient BTC balance for SHORT entry | balance={} required={}",
+                    balance,
+                    tradeAmount
+            );
             return;
         }
 
         log.info(
-                "SHORT entry sizing | btcBalance={} riskAmount={} tradeQuoteNotional={}",
+                "SHORT entry sizing | btcBalance={} riskAmount={} tradeBaseQty={}",
                 balance,
-                user.getRiskAmount(),
+                account.getRiskAmount(),
                 tradeAmount
         );
 
-        if ("BNC".equalsIgnoreCase(user.getExchange())) {
-            tradeService.binanceOpenShortMarketOrder(context,decision, tradeAmount, context.getAsset());
+        if ("BNC".equalsIgnoreCase(account.getExchange())) {
+            tradeService.binanceOpenShortMarketOrder(context, decision, tradeAmount, context.getAsset());
             return;
         }
 
-        log.warn("Unsupported exchange for SHORT entry: {}", user.getExchange());
+        log.warn("Unsupported exchange for SHORT entry: {}", account.getExchange());
     }
 
-    private void executeUpdatePositionManagement(Trades activeTrade,StrategyDecision decision) {
+    private void executeUpdatePositionManagement(Trades activeTrade, StrategyDecision decision) {
         if (activeTrade == null || decision == null) {
             return;
         }
@@ -215,23 +268,36 @@ public class LiveTradingDecisionExecutorService {
         refreshParentTradeSummary(activeTrade.getTradeId());
     }
 
-    private void executeCloseTrade(Trades activeTrade, Account user, String exitReason) {
-        if (activeTrade == null || user == null) {
+    private void executeCloseTrade(Trades activeTrade, Account account, String exitReason) throws JsonProcessingException {
+        if (activeTrade == null || account == null) {
             return;
         }
 
         List<TradePosition> openPositions =
                 tradePositionRepository.findAllByTradeIdAndStatus(activeTrade.getTradeId(), STATUS_OPEN);
 
-        for (TradePosition tradePosition : openPositions) {
-            tradePosition.setExitReason(exitReason != null ? exitReason : "STRATEGY_EXIT");
-            tradePositionRepository.save(tradePosition);
+        if (openPositions.isEmpty()) {
+            return;
+        }
 
-            if ("LONG".equalsIgnoreCase(tradePosition.getSide())) {
-                tradeService.binanceCloseLongPositionMarketOrder(user, tradePosition, tradePosition.getAsset());
-            } else if ("SHORT".equalsIgnoreCase(tradePosition.getSide())) {
-                tradeService.binanceCloseShortPositionMarketOrder(user, tradePosition, tradePosition.getAsset());
-            }
+        TradePosition firstPosition = openPositions.getFirst();
+
+        for (TradePosition tradePosition : openPositions) {
+            tradePosition.setExitReason(exitReason != null ? exitReason : EXIT_REASON_STRATEGY_EXIT);
+        }
+        tradePositionRepository.saveAll(openPositions);
+
+        if (SIDE_LONG.equalsIgnoreCase(firstPosition.getSide())) {
+            tradeService.binanceCloseLongPositionsMarketOrder(account, openPositions, firstPosition.getAsset());
+        } else if (SIDE_SHORT.equalsIgnoreCase(firstPosition.getSide())) {
+            tradeService.binanceCloseShortPositionsMarketOrder(account, openPositions, firstPosition.getAsset());
+        } else {
+            log.warn(
+                    "Unknown side for close trade | tradeId={} side={}",
+                    activeTrade.getTradeId(),
+                    firstPosition.getSide()
+            );
+            return;
         }
 
         refreshParentTradeSummary(activeTrade.getTradeId());
@@ -326,17 +392,25 @@ public class LiveTradingDecisionExecutorService {
         return value == null ? BigDecimal.ZERO : value;
     }
 
-    private BigDecimal calculateLongTradeAmount(BigDecimal usdtBalance, Account user) {
+    private BigDecimal calculateLongTradeAmount(BigDecimal usdtBalance, Account account) {
+        if (usdtBalance == null || account == null || account.getRiskAmount() == null) {
+            return BigDecimal.ZERO;
+        }
+
         BigDecimal tradeAmount = usdtBalance
-                .multiply(user.getRiskAmount())
+                .multiply(account.getRiskAmount())
                 .setScale(8, RoundingMode.DOWN);
 
         return tradeAmount.compareTo(MIN_USDT_NOTIONAL) < 0 ? MIN_USDT_NOTIONAL : tradeAmount;
     }
 
-    private BigDecimal calculateShortTradeAmount(BigDecimal btcBalance, Account user) {
+    private BigDecimal calculateShortTradeAmount(BigDecimal btcBalance, Account account) {
+        if (btcBalance == null || account == null || account.getRiskAmount() == null) {
+            return BigDecimal.ZERO;
+        }
+
         BigDecimal tradeAmount = btcBalance
-                .multiply(user.getRiskAmount())
+                .multiply(account.getRiskAmount())
                 .setScale(8, RoundingMode.DOWN);
 
         return tradeAmount.compareTo(MIN_BTC_NOTIONAL) < 0 ? MIN_BTC_NOTIONAL : tradeAmount;
